--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,13 @@
         "laravel/framework": "^10.10",
         "laravel/passport": "^12.2",
         "laravel/sanctum": "^3.3",
-        "laravel/tinker": "^2.8"
+        "laravel/tinker": "^2.8",
+        "league/fractal": "^0.20.1",
+        "spatie/laravel-collection-macros": "^7.14"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
+        "jason-guru/laravel-make-repository": "^0.0.3",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.18",
         "mockery/mockery": "^1.4.4",
