--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
         "league/fractal": "^0.20.1",
-        "spatie/laravel-collection-macros": "^7.14"
+        "spatie/laravel-collection-macros": "^7.14",
+        "spatie/laravel-permission": "^6.7"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
